check in best c3d model so far

--- a/Code/C3D/C3D_model/C3D without transfer.ipynb
+++ b/Code/C3D/C3D_model/C3D without transfer.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -141,14 +141,17 @@
     "X = tf.placeholder(tf.float32, [None, 5, 64, 64, 3])\n",
     "y = tf.placeholder(tf.int64, [None])\n",
     "is_training = tf.placeholder(tf.bool)\n",
+    "reg = 0.05\n",
     "\n",
     "# define our model\n",
     "def simple_model(X,y):\n",
+    "    regularizers = 0\n",
     "    # define our weights (e.g. init_two_layer_convnet)\n",
     "    \n",
     "    # setup variables\n",
     "    Wconv1 = tf.get_variable(\"Wconv1\", shape=[3, 3, 3, 3, 4])\n",
     "    bconv1 = tf.get_variable(\"bconv1\", shape=[4])\n",
+    "    regularizers += tf.nn.l2_loss(Wconv1)\n",
     "    # (64 - 3 + 0)/2 + 1 = 31\n",
     "    # (5 - 3 + 0)/2 + 1 = 2\n",
     "    # 7688 = 2*31*31*4. with no padding and out dim is \n",
@@ -161,13 +164,13 @@
     "    h1 = tf.nn.relu(a1)\n",
     "    h1_flat = tf.reshape(h1,[-1,7688]) # -1 is N \n",
     "    y_out = tf.matmul(h1_flat,W1) + b1\n",
-    "    return y_out\n",
+    "    return y_out, regularizers\n",
     "\n",
-    "y_out = simple_model(X,y)\n",
+    "y_out, regularizers = simple_model(X,y)\n",
     "\n",
     "# define our loss\n",
     "total_loss = tf.losses.hinge_loss(tf.one_hot(y,4),logits=y_out)\n",
-    "mean_loss = tf.reduce_mean(total_loss)\n",
+    "mean_loss = tf.reduce_mean(total_loss+regularizers*reg)\n",
     "\n",
     "# define our optimizer\n",
     "optimizer = tf.train.AdamOptimizer(5e-4) # select optimizer and set learning rate\n",
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -267,41 +270,41 @@
      "output_type": "stream",
      "text": [
       "Training\n",
-      "Iteration 0: with minibatch training loss = 8.42 and accuracy of 0.28\n",
-      "Epoch 1, Overall loss = 7.7 and accuracy of 0.321\n",
-      "Epoch 2, Overall loss = 8.55 and accuracy of 0.568\n",
-      "Epoch 3, Overall loss = 7.96 and accuracy of 0.519\n",
-      "Iteration 10: with minibatch training loss = 6.31 and accuracy of 0.55\n",
-      "Epoch 4, Overall loss = 5.18 and accuracy of 0.568\n",
-      "Epoch 5, Overall loss = 4.15 and accuracy of 0.667\n",
-      "Epoch 6, Overall loss = 3.52 and accuracy of 0.728\n",
-      "Iteration 20: with minibatch training loss = 0 and accuracy of 1\n",
-      "Epoch 7, Overall loss = 3.22 and accuracy of 0.728\n",
-      "Epoch 8, Overall loss = 2.27 and accuracy of 0.84\n",
-      "Epoch 9, Overall loss = 1.25 and accuracy of 0.901\n",
-      "Epoch 10, Overall loss = 0.953 and accuracy of 0.926\n",
-      "Iteration 30: with minibatch training loss = 0.229 and accuracy of 0.93\n",
-      "Epoch 11, Overall loss = 0.682 and accuracy of 0.901\n",
-      "Epoch 12, Overall loss = 0.372 and accuracy of 0.988\n",
-      "Epoch 13, Overall loss = 0.295 and accuracy of 0.963\n",
-      "Iteration 40: with minibatch training loss = 0.111 and accuracy of 0.95\n",
-      "Epoch 14, Overall loss = 0.0809 and accuracy of 0.963\n",
-      "Epoch 15, Overall loss = 0.0523 and accuracy of 1\n",
-      "Epoch 16, Overall loss = 0.131 and accuracy of 0.975\n",
-      "Iteration 50: with minibatch training loss = 0 and accuracy of 1\n",
-      "Epoch 17, Overall loss = 0.0117 and accuracy of 1\n",
-      "Epoch 18, Overall loss = 0 and accuracy of 1\n",
-      "Epoch 19, Overall loss = 0.00455 and accuracy of 1\n",
-      "Epoch 20, Overall loss = 0.00613 and accuracy of 1\n"
+      "Iteration 0: with minibatch training loss = 12.6 and accuracy of 0.075\n",
+      "Epoch 1, Overall loss = 9.51 and accuracy of 0.284\n",
+      "Epoch 2, Overall loss = 8.11 and accuracy of 0.519\n",
+      "Epoch 3, Overall loss = 7.05 and accuracy of 0.42\n",
+      "Iteration 10: with minibatch training loss = 4.39 and accuracy of 0.5\n",
+      "Epoch 4, Overall loss = 5.09 and accuracy of 0.543\n",
+      "Epoch 5, Overall loss = 3.45 and accuracy of 0.617\n",
+      "Epoch 6, Overall loss = 2.94 and accuracy of 0.642\n",
+      "Iteration 20: with minibatch training loss = 0.0855 and accuracy of 1\n",
+      "Epoch 7, Overall loss = 1.71 and accuracy of 0.765\n",
+      "Epoch 8, Overall loss = 1.82 and accuracy of 0.728\n",
+      "Epoch 9, Overall loss = 1.26 and accuracy of 0.827\n",
+      "Epoch 10, Overall loss = 0.65 and accuracy of 0.877\n",
+      "Iteration 30: with minibatch training loss = 0.424 and accuracy of 0.95\n",
+      "Epoch 11, Overall loss = 0.544 and accuracy of 0.938\n",
+      "Epoch 12, Overall loss = 0.504 and accuracy of 0.901\n",
+      "Epoch 13, Overall loss = 0.303 and accuracy of 0.963\n",
+      "Iteration 40: with minibatch training loss = 0.317 and accuracy of 0.95\n",
+      "Epoch 14, Overall loss = 0.295 and accuracy of 0.951\n",
+      "Epoch 15, Overall loss = 0.233 and accuracy of 0.963\n",
+      "Epoch 16, Overall loss = 0.137 and accuracy of 0.988\n",
+      "Iteration 50: with minibatch training loss = 0.0852 and accuracy of 1\n",
+      "Epoch 17, Overall loss = 0.14 and accuracy of 1\n",
+      "Epoch 18, Overall loss = 0.113 and accuracy of 1\n",
+      "Epoch 19, Overall loss = 0.119 and accuracy of 0.988\n",
+      "Epoch 20, Overall loss = 0.0919 and accuracy of 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.0061334945537425854, 1.0)"
+       "(0.091888410809599322, 1.0)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -326,20 +329,20 @@
      "output_type": "stream",
      "text": [
       "Training\n",
-      "Epoch 1, Overall loss = 0.00241 and accuracy of 1\n",
+      "Epoch 1, Overall loss = 0.112 and accuracy of 1\n",
       "Validation\n",
-      "Epoch 1, Overall loss = 5.71 and accuracy of 0.5\n",
+      "Epoch 1, Overall loss = 6.98 and accuracy of 0.4\n",
       "Test\n",
-      "Epoch 1, Overall loss = 6.91 and accuracy of 0.3\n"
+      "Epoch 1, Overall loss = 5.75 and accuracy of 0.5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(6.9087333679199219, 0.29999999999999999)"
+       "(5.7473783493041992, 0.5)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
